--- a/view/layout.html
+++ b/view/layout.html
@@ -16,6 +16,11 @@
     ></script>
 
     <title>{{ .PageTitle }}</title>
+
+    <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+    <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+    <link rel="micropub" href="https://jay.funabashi.co.uk/micropub" />
+    <link rel="webmention" href="https://j4y.co/webmention" />
   </head>
 
   <body class="">
