--- a/view/homepage.html
+++ b/view/homepage.html
@@ -34,4 +34,8 @@
   {{ end }} {{ end }} {{ end }}
 </div>
 
-{{ end }}
+{{ with .AfterKey }}
+<div>
+  <a class="button" href="{{ .AfterKey }}">Next Page</a>
+</div>
+{{ end }} {{ end }}
