--- a/view/homepage.html
+++ b/view/homepage.html
@@ -36,6 +36,6 @@
 
 {{ with .AfterKey }}
 <div>
-  <a class="button" href="{{ .AfterKey }}">Next Page</a>
+  <a class="button" href="?after={{ . }}">Next Page</a>
 </div>
 {{ end }} {{ end }}
