--- a/view/homepage.html
+++ b/view/homepage.html
@@ -1,56 +1,64 @@
 {{ define "content" }}
 
-<div class="h-card">
-  <div class="media">
-    <div class="media-left">
-      <img
-        class="u-photo"
-        src="https://j4y.co/profile_pic.jpeg"
-        width="45px"
-        height="45px"
-      />
-    </div>
-    <div class="media-content">
-      <ul>
-        <li>
-          <a class="p-name u-url u-uid" href="https://jay.funabashi.co.uk/"
-            >Jay Funabashi</a
-          >
-        </li>
-        <li><a class="u-email" href="mailto:me@j4y.co" rel="me">Email</a></li>
-        <li>
-          <a href="https://github.com/j4y-funabashi" rel="me">Github</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div>
-  {{ range .PostList }}
-
-  <div class="card">
-    {{ with .Photo }} {{ range . }}
-    <div class="card-image">
-      <img
-        src="https://images.weserv.nl/?w=540&h=540&t=square&a=entropy&url={{ . }}"
-      />
-    </div>
-    {{ end }} {{ end }}
-    <div class="card-content">
-      <div class="content">
-        <time class="dt-published" datetime="{{ .Published }}">
-          {{ .Published }}
-        </time>
+<section class="section">
+  <div class="container">
+    <div class="h-card">
+      <div class="media">
+        <div class="media-left">
+          <img
+            class="u-photo"
+            src="https://j4y.co/profile_pic.jpeg"
+            width="45px"
+            height="45px"
+          />
+        </div>
+        <div class="media-content">
+          <ul>
+            <li>
+              <a class="p-name u-url u-uid" href="https://jay.funabashi.co.uk/"
+                >Jay Funabashi</a
+              >
+            </li>
+            <li>
+              <a class="u-email" href="mailto:me@j4y.co" rel="me">Email</a>
+            </li>
+            <li>
+              <a href="https://github.com/j4y-funabashi" rel="me">Github</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+
+    <div>
+      {{ range .PostList }}
+
+      <div class="card">
+        {{ with .Photo }} {{ range . }}
+        <div class="card-image">
+          <img
+            src="https://images.weserv.nl/?w=540&h=540&t=square&a=entropy&url={{ . }}"
+          />
+        </div>
+        {{ end }} {{ end }}
+        <div class="card-content">
+          <div class="content">
+            <time class="dt-published" datetime="{{ .Published }}">
+              {{ .Published }}
+            </time>
+          </div>
+        </div>
+      </div>
+
+      {{ end }}
+    </div>
+
+    {{ with .AfterKey }}
+    <div>
+      <a class="button" href="?after={{ . }}">Next Page</a>
+    </div>
+    {{ end }}
   </div>
+</section>
 
-  {{ end }}
-</div>
-
-{{ with .AfterKey }}
-<div>
-  <a class="button" href="?after={{ . }}">Next Page</a>
-</div>
-{{ end }} {{ end }}
+{{ end }}
