admin media detail

--- a/view/media_gallery.html
+++ b/view/media_gallery.html
@@ -30,7 +30,7 @@
               src="https://images.weserv.nl/?w=240&amp;h=240&amp;t=square&amp;a=entropy&amp;url={{ .URL }}"
             />
             {{ else }}
-            <a href="/admin/media/detail?url={{ .URL }}">
+            <a href="/admin/composer/media/detail?url={{ .URL }}">
               <img
                 src="https://images.weserv.nl/?w=240&amp;h=240&amp;t=square&amp;a=entropy&amp;url={{ .URL }}"
               />
