--- a/view/composer.html
+++ b/view/composer.html
@@ -11,7 +11,7 @@
 
   <form
     method="post"
-    action="/submit"
+    action="/admin/composer"
     enctype="application/x-www-form-urlencoded"
   >
     <textarea
@@ -25,21 +25,28 @@
     <div class="field">
       <div class="control">
         <ul>
+          {{ if .Model.HumanDate }}
           <li>
-            <a href="/admin/composer/addpublished" class="button is-fullwidth">
-              Published
-            </a>
+            {{ .Model.HumanDate }}
           </li>
+          {{ end }}
 
           <li>
             <a href="/admin/composer/media" class="button is-fullwidth"
               >Add a photo</a
             >
           </li>
+
           <li>
-            <a href="/admin/composer/addlocation" class="button is-fullwidth">
+            {{ if .Model.Location.Location }}
+            <a href="/admin/composer/location" class="button is-fullwidth">
+              {{ .Model.Location.Location }}
+            </a>
+            {{ else }}
+            <a href="/admin/composer/location" class="button is-fullwidth">
               Add Location
             </a>
+            {{ end }}
           </li>
         </ul>
       </div>
