--- a/view/composer.html
+++ b/view/composer.html
@@ -75,6 +75,7 @@
       <input type="hidden" name="locality" value="{{ .Locality }}" />
       <input type="hidden" name="region" value="{{ .Region }}" />
       <input type="hidden" name="country" value="{{ .Country }}" />
+      <input type="hidden" name="name" value="{{ .Name }}" />
       <button type="submit" class="button">
         {{ .Location }}
       </button>
