--- a/view/media_gallery.html
+++ b/view/media_gallery.html
@@ -21,7 +21,7 @@
   {{ with .Model.Media }} {{ range . }}
   <div class="columns is-gapless is-mobile">
     {{ range . }}
-    <div class="column is-one-third">
+    <div class="column is-one-quarter">
       <div class="card">
         <div class="card-image">
           <figure class="image is-square">
