search for venues if location is already set

--- a/view/location-search.html
+++ b/view/location-search.html
@@ -36,6 +36,7 @@
     >
       <div class="field">
         <div class="control">
+          <input type="hidden" name="name" value="{{ .Name }}" />
           <input type="hidden" name="lat" value="{{ .Lat }}" />
           <input type="hidden" name="lng" value="{{ .Lng }}" />
           <input type="hidden" name="locality" value="{{ .Locality }}" />
