add media delete

--- a/view/homepage.html
+++ b/view/homepage.html
@@ -62,7 +62,7 @@
 
   {{ with .AfterKey }}
   <div>
-    <a class="button" href="?after={{ . }}">Next Page</a>
+    <a class="button is-fullwidth" href="?after={{ . }}">Next Page</a>
   </div>
   {{ end }}
 </div>
