--- a/view/homepage.html
+++ b/view/homepage.html
@@ -58,17 +58,18 @@
         </div>
       </div>
       {{ end }}
+
+      <!-- next nav -->
+      {{ with .AfterKey }}
+      <div>
+        <a class="button is-fullwidth" href="?after={{ . }}">Next Page</a>
+      </div>
+      {{ end }}
     </div>
 
     <!-- archive nav -->
     <div class="column"></div>
   </div>
-
-  {{ with .AfterKey }}
-  <div>
-    <a class="button is-fullwidth" href="?after={{ . }}">Next Page</a>
-  </div>
-  {{ end }}
 </div>
 
 {{ end }}
